# udemy_cmake_course

./: .gitignore
2_CMake/1_HelloWorld/: CMakeLists.txt  compile_commands.json  main.cpp  makefile
2_CMake/2_BasicProject/: .ccls  CMakeLists.txt  compile_commands.json  makefile  my_lib.cpp
2_CMake/3_IntermediateProject/: CMakeLists.txt  compile_commands.json  makefile
2_CMake/3_IntermediateProject/app/: CMakeLists.txt
2_CMake/3_IntermediateProject/src/: CMakeLists.txt  my_lib.cpp
2_CMake/3_IntermediateProject/src/my_lib/: CMakeLists.txt
2_CMake/4_VariablesOptions/: CMakeLists.txt  compile_commands.json
2_CMake/4_VariablesOptions/app/: main.cpp
2_CMake/4_VariablesOptions/src/: CMakeLists.txt
2_CMake/4_VariablesOptions/src/my_lib/: my_lib.cpp
2_CMake/5_ConfigureFile/: CMakeLists.txt  compile_commands.json  makefile
2_CMake/5_ConfigureFile/app/: CMakeLists.txt  main.cpp
2_CMake/5_ConfigureFile/src/: CMakeLists.txt
2_CMake/5_ConfigureFile/src/include/: my_lib.h
2_CMake/5_ConfigureFile/src/my_lib/: CMakeLists.txt  my_lib.cpp
2_CMake/6_SourcesAndHeaders/: CMakeLists.txt  compile_commands.json
2_CMake/6_SourcesAndHeaders/app/: CMakeLists.txt  main.cpp
2_CMake/6_SourcesAndHeaders/src/my_lib/: my_lib_2.cpp
2_CMake/7_ExternalGit/: CMakeLists.txt  Makefile  compile_commands.json
2_CMake/7_ExternalGit/app/: CMakeLists.txt  main.cpp
2_CMake/8_FetchContent/: CMakeLists.txt  compile_commands.json  makefile
2_CMake/8_FetchContent/app/: CMakeLists.txt  main.cpp
2_CMake/8_FetchContent/src/: CMakeLists.txt
2_CMake/8_FetchContent/src/my_lib/: my_lib.cpp
2_CMake/9_Conan/: CMakeLists.txt  compile_commands.json  makefile
2_CMake/9_Conan/app/: CMakeLists.txt  main.cpp
2_CMake/9_Conan/src/include/: CMakeLists.txt  my_lib.h
2_CMake/9_Conan/src/my_lib/: CMakeLists.txt
2_CMake/test_add_lib/: .ccls  CMakeLists.txt  compile_commands.json  makefile
2_CMake/test_add_lib/lib/: CMakeLists.txt
2_CMake/test_add_lib/lib/impl/: greet.cpp
2_CMake/test_add_lib/src/: main.cpp
